# maailmasampo

./: .gitignore  .pylintrc  README.md  pylint-report.md  pyproject.toml
src/: app.py  classes.py  db.py  exceptions.py  init.sql  items.py  projects.py  schema.sql  seed.py  users.py
src/templates/: edit_item.html  edit_project.html  find_item.html  find_project.html  find_projects_items.html  find_user.html  index.html  layout.html  login.html  new_item.html  new_project.html  register_user.html  remove_item.html  remove_project.html  show_item.html  show_project.html  show_user.html  users.html
